# SEIR

./: .gcloudignore  .gitmodules  App.js  CNAME  LICENSE  README.md  app.yaml  covid19_db.js  covid19_db.py  covid19_rawdata.py  index.html  main.py  package-lock.json  package.json  requirements.txt  seir.py  update_database.sh
customjs/: seirmodel5.js  seirmodel5.wasm
hooks/: post_checkout
src/: .clang-format  CMakeLists.txt  build.sh  module.cpp  seir.cpp  seir.h
static/: countries.json  country_codes.json  datamanager.js  states.json
